--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "nickzames",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.8.9",
     "socket.io": "^2.3.0"
   }
 }
