--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "matter-js": "^0.14.2",
     "mongoose": "^5.8.9",
     "node-pre-gyp": "^0.14.0",
     "socket.io": "^2.3.0"
